--- a/css/style.css
+++ b/css/style.css
@@ -8,15 +8,17 @@ body{
     width: 100vw;
     position: fixed; */
 }
-
+.iconBack{
+    cursor: pointer;
+}
 /* FUENTE DE LOS ICONOS */
 @font-face {
     font-family: 'icomoon';
-    src:  url('fonts/icomoon.eot?tspgsl');
-    src:  url('fonts/icomoon.eot?tspgsl#iefix') format('embedded-opentype'),
-      url('fonts/icomoon.ttf?tspgsl') format('truetype'),
-      url('fonts/icomoon.woff?tspgsl') format('woff'),
-      url('fonts/icomoon.svg?tspgsl#icomoon') format('svg');
+    src:  url('../fonts/icomoon.eot?tspgsl');
+    src:  url('../fonts/icomoon.eot?tspgsl#iefix') format('embedded-opentype'),
+      url('../fonts/icomoon.ttf?tspgsl') format('truetype'),
+      url('../fonts/icomoon.woff?tspgsl') format('woff'),
+      url('../fonts/icomoon.svg?tspgsl#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: block;
@@ -187,10 +189,48 @@ body{
     padding-left: 7px;
     font-size: 9.5px;
 }
-.search-bar{
+/* .search-bar{
     display: none;
-}
+} */
 
+/*************************************** Buscador*/
+.search-bar{
+    display: grid;
+    grid-template-columns: 35px minmax(40px, 574px) 64px;
+    align-content: center;
+    align-items: center;
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+    height: 56px;
+    padding: 12px 10px;
+    background: white;
+    box-sizing: border-box;
+}
+.box-search{
+    display: block;
+    width: 100%;
+    height: 30px;
+    padding: 0 11px;
+    border: 1px solid #d3d3d3;
+    border-right: none;
+    font-size: 16px;
+    outline-color: #1c62b9;
+}
+.search-button{
+    text-align: center;
+    border: 1px solid #d3d3d3;
+    line-height: 28px;
+    padding-top: 2px;
+}
+.button-search{
+    color: #828282;
+    font-size: 14px;
+}
+.iconBack{
+    margin-right: 5px;
+}
 .menu-right{
     height: inherit;
 }
@@ -246,9 +286,9 @@ body{
     background: #ffffff;
     z-index: 1;
 }
-.menu-left.hidden{
+/* .menu-left.hidden{
     display: none;
-}
+} */
 .menu-left-item{
     text-decoration: none;
     color: #606060;
@@ -339,12 +379,13 @@ body{
     height: 86px;
     padding-top: 9px;
 }
-.menu-crear.hidden,
+/* .menu-crear.hidden,
 .menu-apps.hidden,
 .menu-notifications.hidden,
-.menu-profile.hidden{
+.menu-profile 
+.hidden{
     display: none;
-}
+}*/
 /* .container-menu-crear-item{
 
 } */
@@ -582,9 +623,6 @@ body{
     position: relative;
     background: #f9f9f9;
 }
-.main-content.change{
-    margin-left: 242px;
-}
 .video-content,
 .mix-content{
     display: grid;
@@ -750,18 +788,22 @@ body{
 .menu-more-options-content{
     position: absolute;
     top: 120%;
+    width: 310px;
     left: 91.5%;
-    width: 320px;
     height: 243px;
     padding: 3px 0;
     box-shadow: 0px 0px 2px 1px #d3d3d3;
     background: white;
     z-index: 1;
-    border-radius: 2px;
+    border-radius: 3px;
     display: none;
 }
 .menu-more-options-content.deploy{
     display: block;
+}
+.menu-more-options-content.finish{
+    right: 0;
+    left: auto;
 }
 .interes{
     border-bottom: 1px solid #e5e5e5;
@@ -785,6 +827,10 @@ body{
     font-size: 14px;
     color: black;
     margin: 10px 0;
+}
+
+.hidden{
+    display: none;
 }
 
 /*-----------------------------------------------------------MORE IN VIDEOS*/
