se organizan estilos del buscador y el tamaño maximo de los videos para 4 columnas desde los media queries

--- a/css/style.css
+++ b/css/style.css
@@ -201,6 +201,7 @@ body{
     align-items: center;
     position: absolute;
     width: 100%;
+    max-width: 650px;
     top: 0;
     left: 0;
     height: 56px;
